Attempting to fix h1 text overflow in css

--- a/src/styling.css
+++ b/src/styling.css
@@ -14,6 +14,11 @@ h1 {
   font-size: 60px;
   text-transform: uppercase;
   font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  line-height: 1em;
+  max-height: 2em;
 }
 
 h2 {
@@ -26,12 +31,6 @@ h2 {
   text-transform: uppercase;
   font-weight: 500;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.9);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-wrap: break-word;
-  display: block;
-  line-height: 1em; /* a */
-  max-height: 2em; /* a x number of line to show (ex : 2 line)  */
 }
 
 p {
@@ -156,8 +155,7 @@ form {
 
 #city-search {
   text-align: center;
-  margin: 0px 20px 0px 20px;
-  padding: 8px 0px 0px 0px;
+  margin: 0px 5px 10px 5px;
   color: #fff;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
   font-size: 60px;
